side bar layout issue fixed

--- a/pages/Lab03/style.css
+++ b/pages/Lab03/style.css
@@ -5,8 +5,8 @@
     --color-accent: rgb(255, 255, 255);
     --border-color: rgb(87, 87, 87);
     --size-avat: 30px;
-    --size-side-icon: 25px;
-    --size-title-font: 30px;
+    --size-side-icon: 35px;
+    --size-title-font: 40px;
     --color-primary-font: rgb(255, 255, 255);
     --color-secondary-font: rgb(87, 87, 87);
     --gradient-primary: linear-gradient(to right, 
@@ -14,7 +14,8 @@
                                     rgb(239, 147, 90), 
                                     rgb(194, 106, 231), 
                                     rgb(53, 69, 170));
-    --height-line-card: 40px;
+    --height-line-card: 50px;
+    --size-btn-font: 16px;
   }
   
   body {
@@ -30,13 +31,15 @@
     display: grid;
     border-radius: 30px;
     grid-template-columns: 1fr 12fr;
-    margin: 20px 20px;
+
+    margin: 20px;
     background: rgb(46, 46, 46);
+    padding: 20px;
   }
 /* sidebar start */
   #side-bar {
     width: 100px;
-    height: 100vh;
+    height: 100%;
     border-radius: 30px 0px 0px 30px;
     background: var(--color-secondary);
     display: grid;
@@ -74,10 +77,9 @@
 
   .side-icons {
     cursor: pointer;
-    padding-left: 20px;
     margin-left: 10px;
-    width: 70px;
-    height: 60px;
+    width: 120px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,6 +105,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin: 10px 0px;
     font-size: var(--size-title-font);
     color: var(--color-primary-font);
     border-radius: 30px 30px 0px 0px;
@@ -153,7 +156,7 @@
   
   #btn-div{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 20px;
   }
@@ -187,15 +190,16 @@
     /* height: 100%; */
   }
   #usd{
-    font-size: 30px;
+    font-size: 50px;
     line-height: var(--height-line-card);
     font-weight: 700;
   }
 
   #etb{
-    font-size: 13px;
+    font-size: 16px;
     line-height: var(--height-line-card);
     color: var(--color-secondary-font);
+    margin-bottom: 20px;
   }
 
   #card2{
@@ -203,11 +207,13 @@
     height: 100%;
     width: 300px;
     color: var(--color-primary);
+    font-size: 30px;
+    margin-bottom: 30px;
   }
 
   #card2 img{
-    width: 30px;
-    height: 30px;
+    width: 130px;
+    height: 130px;
 
   }
 
@@ -245,7 +251,7 @@
     text-decoration: none;
     color: var(--color-primary-font);
     font-weight: 500;
-    font-size: smaller;
+    font-size: 16px;
   }
 
   .table label {
@@ -266,10 +272,11 @@
   .btn{
     cursor: pointer;
     background-color: var(--color-primary);
+    font-size: var(--size-btn-font);
     border-radius: 10px;
     border: 0.5px solid var(--border-color);
-    height: 40px;
-    width: 100px;
+    height: 55px;
+    width: 140px;
     padding: 0px 10px;
     text-decoration: none;
     color: var(--color-primary-font);
